JDK-9 support
Added:
    updated compile-plugin to higher version with support for lombok